# au_automow_drivers

./: .gitignore  LICENSE
automow_pcb/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
automow_pcb/msg/: Status.msg
automow_pcb/src/: power_control.cpp
automow_pcb/src/Metro/: Metro.cpp  about.txt
ax2550/: CMakeLists.txt
ax2550/include/: ax2550.h
magellan_dg14/: CMakeLists.txt  manifest.xml
magellan_dg14/config/: LAWN_BASE_SOL.GPS  LAWN_ROV_FIXED.GPS  LAWN_ROV_FLOAT.GPS
magellan_dg14/include/dg14/: dg14.h
magellan_dg14/msg/: UTMFix.msg
magellan_dg14/scripts/: check_status.py  load_config.py
magellan_dg14/src/: dg14.cc  dg14_driver.cc  dg14_node.cc
power_control_board/: manifest.xml
